# home

./: setup.sh
nixfiles/: home.nix  nixfiles  python.nix  scala-cli.nix  spin.nix  vimrc
nixfiles/localstack/: default.nix  localstack_wrapper.py  pyproject.toml
nixpkgs/: home.nix
