[tool.poetry]
name = "localstack-wrapper"
version = "0.1.0"
description = "A simple wrapper around localstack to allow it to be integrated with nix using poetry2nix"
authors = ["foo"]
packages = [
    { include = "localstack_wrapper.py" }
]

[tool.poetry.dependencies]
python = "^3.9"
localstack = "0.13.3"

[tool.poetry.scripts]
localstack = "localstack_wrapper:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
